Fix opaque photo cropping box

--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -2623,7 +2623,6 @@ form.Thumbnail .Warning {
 }
 
 .jcrop-tracker {
-  background-color: #444;
   width: 100%;
   height: 100%;
 }
