--- a/themes/2011Compatibility/design/custom_red.css
+++ b/themes/2011Compatibility/design/custom_red.css
@@ -1006,10 +1006,6 @@ div.Tabs div.SubTab {
 
 }
 
-.jcrop-tracker {
-    *background-color: gray;
-}
-
 .custom .jcrop-vline,
 .custom .jcrop-hline {
     background: yellow;
